--- a/css/style.css
+++ b/css/style.css
@@ -159,6 +159,9 @@ body {
   min-height: 100vh;
   display: flex;
   align-items: center;
+  background-image: 
+    linear-gradient(135deg, rgba(0, 0, 0, 0.7), rgba(26, 26, 26, 0.8)),
+    url("image/bg.jpg");
   background: linear-gradient(135deg, rgba(0, 0, 0, 0.7), rgba(26, 26, 26, 0.8)),
     url("data:image/svg+xml,%3Csvg width='60' height='60' viewBox='0 0 60 60' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%23cae723' fill-opacity='0.1'%3E%3Ccircle cx='30' cy='30' r='4'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
   background-size: cover;
