--- a/css/style.css
+++ b/css/style.css
@@ -186,6 +186,8 @@ body {
   color: #fff;
   text-shadow: 1px 1px 3px rgba(1, 1, 3, 0.5);
   line-height: 1.2;
+  margin-bottom: 1rem;
+  opacity: 0;
   animation: fadeInUp 1s ease forwards 0.5s;
 }
 
@@ -200,7 +202,7 @@ body {
   line-height: 1.4;
   font-weight: 200;
   text-shadow: 1px 1px 3px rgba(1, 1, 3, 0.5);
-  mix-blend-mode: difference;
+  opacity: 0;
   animation: fadeInUp 1s ease forwards 0.8s;
 }
 
