--- a/css/style.css
+++ b/css/style.css
@@ -202,6 +202,7 @@ body {
   line-height: 1.4;
   font-weight: 200;
   text-shadow: 1px 1px 3px rgba(1, 1, 3, 0.5);
+  mix-blend-mode: difference;
   opacity: 0;
   animation: fadeInUp 1s ease forwards 0.8s;
 }
